<resources>
    <string name="app_name">SPb Weather</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind speed</string>
    <string name="pressure">Pressure</string>
    <string name="details">Details</string>
    <string name="forecast">Forecast</string>
    <string name="feels_like">feels like %1$s °C</string>
    <string name="c">°C</string>
    <string name="saint_petersburg">Saint Petersburg</string>
    <string name="humidity_text">%1$s \%%</string>
    <string name="wind_speed_text">%1$s m/s</string>
    <string name="pressure_text">%1$s hPa</string>
    <string name="temperature">%1$s%</string>
    <string name="temperature_forecast_item">%1$s°C</string>
    <string name="date_time">%1$s</string>
    <string name="weather_description">1$s%</string>
    <string name="cloudiness_text">%1$s \%%</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="wind_degrees">Wind degrees</string>
    <string name="wind_degrees_text">%1$s °</string>
    <string name="wind_gust">Wind gust</string>
    <string name="wind_gust_text">%1$s m/s</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="visibility">Visibility</string>
    <string name="visibility_text">%1$s m</string>
    <string name="weather_icon">Weather icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>