<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_drawable"
    android:padding="16dp"
    tools:context=".ui.DetailsFragment">

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/light_blue"
        android:shadowRadius="5"
        android:text="@string/temperature"
        android:textSize="80sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="25" />

    <TextView
        android:id="@+id/celsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:shadowColor="@color/light_blue"
        android:shadowRadius="5"
        android:text="@string/c"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/temperature"
        app:layout_constraintTop_toTopOf="@id/temperature" />

    <TextView
        android:id="@+id/city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/light_blue"
        android:shadowRadius="5"
        android:text="@string/saint_petersburg"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/date_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/celsius" />

    <TextView
        android:id="@+id/date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/light_blue"
        android:shadowRadius="5"
        android:text="@string/date_time"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/feels_like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city_name"
        tools:text="@tools:sample/date/ddmmyy" />

    <TextView
        android:id="@+id/feels_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/light_blue"
        android:shadowRadius="5"
        android:text="@string/feels_like"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_time" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/weather_icon"
        app:layout_constraintBottom_toBottomOf="@id/weather_description"
        app:layout_constraintEnd_toStartOf="@id/weather_description"
        app:layout_constraintTop_toTopOf="@id/weather_description" />

    <TextView
        android:id="@+id/weather_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/light_blue"
        android:shadowRadius="5"
        android:text="@string/weather_description"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_guideline"
        tools:text="@tools:sample/full_names" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/details_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

    <LinearLayout
        android:id="@+id/details_first_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@id/details_guideline">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/humidity"
                android:src="@drawable/humidity"
                app:tint="@color/white" />

            <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity_text"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.legacy.widget.Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/cloudiness"
                android:src="@drawable/cloudiness"
                app:tint="@color/white" />

            <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloudiness"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/cloudiness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity_text"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.legacy.widget.Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/visibility"
                android:src="@drawable/visibility"
                app:tint="@color/white" />

            <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visibility"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visibility_text"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <androidx.legacy.widget.Space
        android:id="@+id/first_blank_space"
        android:layout_width="wrap_content"
        android:layout_height="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_first_row" />

    <LinearLayout
        android:id="@+id/details_second_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@id/first_blank_space">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/wind_speed"
                android:src="@drawable/wind_speed"
                app:tint="@color/white" />

            <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed_text"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.legacy.widget.Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/wind_degrees"
                android:src="@drawable/wind_rose"
                app:tint="@color/white" />

            <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_degrees"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/wind_degrees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_degrees_text"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.legacy.widget.Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/wind_gust"
                android:src="@drawable/wind_gust"
                app:tint="@color/white" />

            <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_gust"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/wind_gust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_gust_text"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <androidx.legacy.widget.Space
        android:id="@+id/second_blank_space"
        android:layout_width="wrap_content"
        android:layout_height="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_second_row" />

    <LinearLayout
        android:id="@+id/details_third_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@id/second_blank_space">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/pressure"
                android:src="@drawable/pressure"
                app:tint="@color/white" />

            <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure_text"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.legacy.widget.Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/sunrise"
                android:src="@drawable/sunrise"
                app:tint="@color/white" />

            <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunrise"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="@tools:sample/date/hhmmss" />
        </LinearLayout>

        <androidx.legacy.widget.Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/sunset"
                android:src="@drawable/sunset"
                app:tint="@color/white" />

            <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunset"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="@tools:sample/date/hhmmss" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>